# cncli

./: .gitmodules  Cargo.toml  Makefile
data/: default_conf.json  default_machine.json  line.dxf  line.gcode  triangle.dxf  triangle.gcode
src/: gen.rs  main.rs  setup.rs  util.rs
src/setup/: conf.rs  mod.rs
src/setup/conf/: mod.rs
test/: default_conf.json  default_reducer.json
