[package]
name = "cncli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dxf = "0.5.0"

[patch.crates-io.dxf]
# TODO: remove when https://github.com/ixmilia/dxf-rs/pull/47 ir merged
git = "https://github.com/mrghosti3/dxf-rs.git"
branch = "point-to-tuple"
